syntax = "proto3";
package proto;
option go_package = "./internal/protobuf";


message KexReq {
    bytes Nonce = 1;
    bytes PublicKeyHash = 2;
    bytes Signature = 3;
}

message KexResp {
    bytes Nonce = 1;
    bytes KexPublicKey = 2;
    bytes Signature = 3;
}


message Packet {
    uint32 TargetID = 1;
    uint32 SourceID = 2;
    PacketKind Kind = 3;
    bytes Data = 4;
}

enum PacketKind {
    PacketKindInfo = 0;
    PacketKindCtrl = 1;
    PacketKindData = 2;
    PacketKindError = 3;
}
